Connected HTML pages to backend cart system w/ dynamic pricing & add/remove functionality

--- a/Front-End/accessories.html
+++ b/Front-End/accessories.html
@@ -26,85 +26,129 @@
     </div>
 
     <h1 style="clear:both; margin:0px;"><br><br><br>Playstation Controllers</h1>
-
     <div id="samples">
         <div class="expo">
             <h2>White Controller</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-11">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/accessories/playstation-white.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" class="minus" data-id="11" style="cursor:pointer" /></div>
+              <div><img src="img/accessories/playstation-white.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" class="plus" data-id="11" style="cursor:pointer" /></div>
             </div>
         </div>
         <div class="expo">
             <h2>Blue Controller</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-12">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/accessories/playstation-blue.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" class="minus" data-id="12" style="cursor:pointer" /></div>
+              <div><img src="img/accessories/playstation-blue.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" class="plus" data-id="12" style="cursor:pointer" /></div>
             </div>
         </div>
         <div class="expo">
             <h2>Camo Controller</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-14">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/accessories/playstation-camo.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" class="minus" data-id="14" style="cursor:pointer" /></div>
+              <div><img src="img/accessories/playstation-camo.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" class="plus" data-id="14" style="cursor:pointer" /></div>
             </div>
         </div>
         <div class="expo">
             <h2>Pink Controller</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-21">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/accessories/playstation-pink.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-    </div>
-        <h1 style="clear:both; margin:0px;"><br>Xbox Controllers</h1>
-        <div id="samples">
-        <div class="expo">
-            <h2>Black Controller</h2>
-            <h3>$60.00</h3>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/accessories/xbox-black.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Blue Controller</h2>
-            <h3>$60.00</h3>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/accessories/xbox-blue.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Green Controller</h2>
-            <h3>$60.00</h3>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/accessories/xbox-green.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Red Controller</h2>
-            <h3>$60.00</h3>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/accessories/xbox-red.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" class="minus" data-id="21" style="cursor:pointer" /></div>
+              <div><img src="img/accessories/playstation-pink.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" class="plus" data-id="21" style="cursor:pointer" /></div>
             </div>
         </div>
     </div>
 
-    
+    <h1 style="clear:both; margin:0px;"><br>Xbox Controllers</h1>
+    <div id="samples">
+        <div class="expo">
+            <h2>Black Controller</h2>
+            <h3 id="price-22">$60.00</h3>
+            <div class="expoImg">
+              <div><img src="img/minus.png" class="minus" data-id="22" style="cursor:pointer" /></div>
+              <div><img src="img/accessories/xbox-black.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" class="plus" data-id="22" style="cursor:pointer" /></div>
+            </div>
+        </div>
+        <div class="expo">
+            <h2>Blue Controller</h2>
+            <h3 id="price-23">$60.00</h3>
+            <div class="expoImg">
+              <div><img src="img/minus.png" class="minus" data-id="23" style="cursor:pointer" /></div>
+              <div><img src="img/accessories/xbox-blue.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" class="plus" data-id="23" style="cursor:pointer" /></div>
+            </div>
+        </div>
+        <div class="expo">
+            <h2>Green Controller</h2>
+            <h3 id="price-13">$60.00</h3>
+            <div class="expoImg">
+              <div><img src="img/minus.png" class="minus" data-id="13" style="cursor:pointer" /></div>
+              <div><img src="img/accessories/xbox-green.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" class="plus" data-id="13" style="cursor:pointer" /></div>
+            </div>
+        </div>
+        <div class="expo">
+            <h2>Red Controller</h2>
+            <h3 id="price-25">$60.00</h3>
+            <div class="expoImg">
+              <div><img src="img/minus.png" class="minus" data-id="25" style="cursor:pointer" /></div>
+              <div><img src="img/accessories/xbox-red.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" class="plus" data-id="25" style="cursor:pointer" /></div>
+            </div>
+        </div>
+    </div>
+
+<!-- Script  -->
+<script>
+    async function fetchAndUpdatePrice(productId) {
+      const res = await fetch(`http://localhost:4000/api/products/${productId}`);
+      const product = await res.json();
+      if (product.price) {
+        document.getElementById(`price-${productId}`).textContent = `$${product.price.toFixed(2)}`;
+      }
+    }
+  
+    window.onload = function () {
+      const productIds = [11, 12, 13, 14, 21, 22, 23, 25];
+      productIds.forEach(id => fetchAndUpdatePrice(id));
+    };
+</script>
+
+<script>
+    const sessionId = localStorage.getItem("session_id") || crypto.randomUUID();
+    localStorage.setItem("session_id", sessionId);
+
+    async function updateCart(productId, action) {
+      const endpoint = action === "add" ? "add" : "remove";
+      const res = await fetch(`http://localhost:4000/api/cart/${endpoint}`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ session_id: sessionId, product_id: productId }),
+      });
+
+      if (res.ok) {
+        console.log(`Item ${action}ed successfully`);
+      } else {
+        const error = await res.json();
+        console.error("Error updating cart:", error);
+      }
+    }
+
+    document.querySelectorAll(".plus").forEach(btn => {
+      btn.addEventListener("click", () => updateCart(parseInt(btn.dataset.id), "add"));
+    });
+
+    document.querySelectorAll(".minus").forEach(btn => {
+      btn.addEventListener("click", () => updateCart(parseInt(btn.dataset.id), "remove"));
+    });
+</script>
+
 </body> 
-</html> 
+</html>
