--- a/Front-End/games.html
+++ b/Front-End/games.html
@@ -22,114 +22,174 @@
     <div id="samples">
         <div class="expo">
             <h2>Astro Bot</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-7">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/astro-bot.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div>
+                <img src="img/minus.png" alt="Minus" class="minus" data-id="7" style="cursor:pointer" />
+              </div>
+              <div>
+                <img src="img/games/astro-bot.png" alt="Game" style="max-width:100%; height:auto" />
+              </div>
+              <div>
+                <img src="img/plus.png" alt="Plus" class="plus" data-id="7" style="cursor:pointer" />
+              </div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Black Ops 6</h2>
-            <h3>$70.00</h3>
+            <h3 id="price-6">$70.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/bo6.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="6" style="cursor:pointer" /></div>
+              <div><img src="img/games/bo6.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="6" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Elden Ring</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-1">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/elden-ring.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="1" style="cursor:pointer" /></div>
+              <div><img src="img/games/elden-ring.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="1" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Marvel's Spider Man 2</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-8">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="8" style="cursor:pointer" /></div>
+              <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="8" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Forza Horizon 5</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-9">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/forza.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="9" style="cursor:pointer" /></div>
+              <div><img src="img/games/forza.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="9" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>EA Madden 2025</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-10">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/madden.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="10" style="cursor:pointer" /></div>
+              <div><img src="img/games/madden.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="10" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Star Wars Outlaws</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-28">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/outlaws.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="28" style="cursor:pointer" /></div>
+              <div><img src="img/games/outlaws.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="28" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Assassins Creed Valhala</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-29">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/valhala.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="29" style="cursor:pointer" /></div>
+              <div><img src="img/games/valhala.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="29" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Animal Crossing New Horizons</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-30">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/animal-crossing.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="30" style="cursor:pointer" /></div>
+              <div><img src="img/games/animal-crossing.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="30" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Mario Kart 8</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-31">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/mariokart.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="31" style="cursor:pointer" /></div>
+              <div><img src="img/games/mariokart.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="31" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Pokemon Legends Arceus</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-32">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/pokemon.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="32" style="cursor:pointer" /></div>
+              <div><img src="img/games/pokemon.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="32" style="cursor:pointer" /></div>
             </div>
         </div>
+
         <div class="expo">
             <h2>Super Smash Bro's Ultimate</h2>
-            <h3>$60.00</h3>
+            <h3 id="price-33">$60.00</h3>
             <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/smash-bros.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="33" style="cursor:pointer" /></div>
+              <div><img src="img/games/smash-bros.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="33" style="cursor:pointer" /></div>
             </div>
         </div>
+
     </div>
 
+<!-- Scripts are untouched -->
+<script>
+    async function fetchAndUpdatePrice(productId) {
+        const res = await fetch(`http://localhost:4000/api/products/${productId}`);
+        const product = await res.json();
+        document.getElementById(`price-${productId}`).textContent = `$${product.price.toFixed(2)}`;
+    }
     
+    window.onload = function () {
+        const productIds = [1, 6, 7, 8, 9, 10, 28, 29, 30, 31, 32, 33];
+        productIds.forEach(id => fetchAndUpdatePrice(id));
+    };
+</script>
+
+<script>
+    const sessionId = localStorage.getItem("session_id") || crypto.randomUUID();
+    localStorage.setItem("session_id", sessionId);
+
+    async function updateCart(productId, action) {
+      const endpoint = action === "add" ? "add" : "remove";
+      const res = await fetch(`http://localhost:4000/api/cart/${endpoint}`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ session_id: sessionId, product_id: productId }),
+      });
+
+      if (res.ok) {
+        console.log(`Item ${action}ed successfully`);
+      } else {
+        const error = await res.json();
+        console.error("Error updating cart:", error);
+      }
+    }
+
+    document.querySelectorAll(".plus").forEach(btn => {
+      btn.addEventListener("click", () => updateCart(parseInt(btn.dataset.id), "add"));
+    });
+
+    document.querySelectorAll(".minus").forEach(btn => {
+      btn.addEventListener("click", () => updateCart(parseInt(btn.dataset.id), "remove"));
+    });
+</script>
+
 </body> 
-</html> 
+</html>
