--- a/Front-End/cart.html
+++ b/Front-End/cart.html
@@ -1,8 +1,28 @@
 <html> 
 <head> 
-<title>Game Store</title> 
+<title>Panther's Games</title> 
 <link rel="stylesheet" type="text/css" media="all" href="store.css">
 <link rel="icon" type="image/x-icon" href="img/paw-print.png">
+<style>
+    .expo{
+        width:45%;
+        height:auto;
+        text-align: center;
+    }
+
+    .expo input{
+        margin-left: 38%;
+        margin-right: 72%;
+        width:25%;
+        margin-top: 1;
+        margin-bottom: 5%;
+    }
+
+    hr{
+        color:rgb(119, 136, 153);
+        width:80%;
+    }
+</style>
 </head> 
 <body> 
 
@@ -12,14 +32,38 @@
             <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
         </div>
         <div id="userInfo">
-            Enter Phone Number
-            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0"><br><br><br>
+            <label for="phoneNum">Enter Phone Number</label>
+            <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
+            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0;"><br><br>
         </div>
     </div>
 
     <div id="samples">
         <div class="expo">
-            <h2>Cart</h2>
+            <h2 style="margin-bottom: -20%;">Cart</h2>
+            <div>
+                Item 1 x3 ------------------------------------- $250<br>
+                Item 1 x3 ------------------------------------- $250<br>
+                Item 1 x3 ------------------------------------- $250<br>
+                Item 1 x3 ------------------------------------- $250<br>
+                Item 1 x3 ------------------------------------- $250<br>
+                <hr>
+                Total ------------------------------------------$~~~~
+            </div>
+        </div>
+        <div class="expo">
+            <h2>Enter Payment Information</h2>
+
+            <label for="cardNumber">Card Number</label><br>
+            <input type="text" id="cardNumber" name="cardNumber" placeholder="1234-5678-1234-5678" pattern="\d{16}" maxlength="16" required>
+
+            <label for="CVV">CVV</label><br>
+            <input type="text" id="CVV" name="CVV" placeholder="123" maxlength="3" required>
+
+            <label for="expDate">Exp. Date</label><br>
+            <input type="text" id="expDate" name="expDate" pattern="^(0[1-9]|1[0-2])\/\d{2}$" placeholder="MM/YY" title="Enter a valid date in MM/YY format" maxlength="5" required>
+
+            <input type="submit" value="Submit">
         </div>
     </div>
 
