--- a/Front-End/main.html
+++ b/Front-End/main.html
@@ -1,6 +1,6 @@
 <html> 
 <head> 
-<title>Game Store</title> 
+<title>Panther's Games</title> 
 <link rel="stylesheet" type="text/css" media="all" href="style.css">
 <link rel="icon" type="image/x-icon" href="img/paw-print.png">
 </head> 
@@ -8,8 +8,9 @@
     <div id="banner">
         <div id="header"><h1>Panther's Games</h1></div>
         <div id="userInfo">
-            Enter Phone Number
-            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0"><br><br><br>
+            <label for="phoneNum">Enter Phone Number</label>
+            <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
+            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0;"><br><br>
             <a href = "cart.html">View Cart</a>
         </div>
     </div>
