--- a/Front-End/cart.html
+++ b/Front-End/cart.html
@@ -95,7 +95,7 @@
 
   <div id="cart-container">
     <div id="cart-items">
-      <!-- Items will be rendered here -->
+      <!-- Items will be rendered here 1-->
     </div>
     <div id="cart-summary">
       <div id="total-price">Total: $0.00</div>
