--- a/Front-End/consoles.html
+++ b/Front-End/consoles.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <!-- Scripts -->
+  <!-- Scripts 1-->
   <script>
     async function fetchAndUpdatePrice(productId) {
       const res = await fetch(`http://localhost:4000/api/products/${productId}`);
