--- a/Front-End/games.html
+++ b/Front-End/games.html
@@ -148,7 +148,7 @@
 
     </div>
 
-<!-- Scripts are untouched -->
+<!-- Scripts are untouched 1-->
 <script>
     async function fetchAndUpdatePrice(productId) {
         const res = await fetch(`http://localhost:4000/api/products/${productId}`);
