--- a/Front-End/accessories.html
+++ b/Front-End/accessories.html
@@ -105,7 +105,7 @@
         </div>
     </div>
 
-<!-- Script  -->
+<!-- Script 1 -->
 <script>
     async function fetchAndUpdatePrice(productId) {
       const res = await fetch(`http://localhost:4000/api/products/${productId}`);
