--- a/Front-End/cart.html
+++ b/Front-End/cart.html
@@ -99,17 +99,17 @@
 
   <div id="banner">
     <div id="header">
-      <h1>Panther's Games</h1>
-    </div>
-    <div id="header">
-      <h1>Cart</h1>
+        <h1>Panther's Games</h1> 
+        <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
     </div>
     <div id="userInfo">
-      Enter Phone Number
-      <img src="img/phone.png" alt="Phone" style="width:50px; margin:0"><br><br><br>
-      <a href="main.html">Back to Main</a>
+        <label for="phoneNum">Enter Phone Number</label>
+        <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
+        <img src="img/phone.png" alt="Phone" style="width:50px; margin:0;"><br><br>
     </div>
-  </div>
+</div>
+</div>
+<div id="title">Cart</div>
 
   <div id="cart-container">
     <div id="cart-items">
