--- a/Front-End/main.html
+++ b/Front-End/main.html
@@ -42,6 +42,10 @@
         </a>
     </div>
 
+    <div class="admin">
+        <a href = "admin.html" >Admin</a>
+    </div>
+
     
 </body> 
 </html> 
